syntax = "proto3";

import "spiderrock_common.proto";


package spiderrock.protobuf;

import "google/protobuf/timestamp.proto";

    
message OptionCorpActionRecordV5 {
    message PKey {
        
        TickerKey root = 10; // root at EOD on trading date
        DateKey ex_date = 11; // ex-date of the action
    }


    MessageMetadata _meta = 1;
    
    PKey pkey = 2;
    TickerKey sod_root = 100; // (new) mh root post adjustment
    double mark_multiplier = 103; // sodMark = eodMark x markMultiplier
    int32 position_multiplier = 106; // sodPosition = eodPosition x positionMultiplier
    double strike_factor = 109; // sodStrike = eodStrike x strikeMultiplier - strikeFactor
    double strike_multiplier = 112; // sodStrike = eodStrike x strikeMultiplier - strikeFactor
    int32 strike_precision = 115; // number of decimal places to round after adjusting strike (usually 2)
    string corp_action_text = 118; // descriptive detail (optional)
    CAType corp_action_type = 121; // corporate action type
    google.protobuf.Timestamp timestamp = 124;
}


